syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "AnimalProductServiceProto";

service AnimalProductService {
  rpc GetAnimalByProduct(ProductRequest) returns (AnimalResponse);
  rpc GetProductsByAnimal(AnimalRequest) returns (ProductResponse);
}

message ProductRequest {
  string product_id = 1;
}

message AnimalRequest {
  string animal_id = 1;
}

message Animal {
  string registration_number = 1;
  string name = 2;
}

message Product {
  string id = 1;
  string name = 2;
}

message AnimalResponse {
  repeated Animal animals = 1;
}

message ProductResponse {
  repeated Product products = 1;
}
